--- a/scent-site-tailwind/index.html
+++ b/scent-site-tailwind/index.html
@@ -4,41 +4,408 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
-
     <!--~~~~~~~~~~~~~~~ Favicon ~~~~~~~~~~~~~~~-->
+    <link
+      rel="shortcut icon"
+      href="./asset/images/White-OUD-100ml.jpeg"
+      type="image/x-icon"
+    />
 
     <!--~~~~~~~~~~~~~~~ Remix Icon ~~~~~~~~~~~~~~~-->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/4.2.0/remixicon.min.css"
+    />
 
     <title>Perfume Website || TailwindCSS</title>
   </head>
 
   <body>
     <!--~~~~~~~~~~~~~~~ Header ~~~~~~~~~~~~~~~-->
-    <header id="navbar"></header>
+    <header id="navbar" class="bg-bodyColor fixed top-0 w-full left-0 z-50">
+      <nav class="container flex justify-between items-center h-16 sm:h-20">
+        <div class="font-dancing text-2xl sm:text-5xl">perfume.</div>
+        <div
+          id="nav-menu"
+          class="bg-cardColor absolute top-0 left-[-100%] min-h-[80vh] w-full flex justify-center duration-300 items-center md:static md:min-h-fit md:w-auto md:bg-transparent"
+        >
+          <ul class="flex md:flex-row flex-col items-center gap-8">
+            <li><a href="#hero" class="nav-link active">Home</a></li>
+            <li><a href="#collection" class="nav-link">Collection</a></li>
+            <li><a href="#popular" class="nav-link">Popular</a></li>
+            <li><a href="#about" class="nav-link">About</a></li>
+          </ul>
+        </div>
+
+        <div class="text-xl sm:text-3xl cursor-pointer z-50 md:hidden">
+          <i class="ri-menu-2-line" id="hamburger"></i>
+        </div>
+      </nav>
+    </header>
 
     <main>
       <!--~~~~~~~~~~~~~~~ Hero Section ~~~~~~~~~~~~~~~-->
-      <div id="hero"></div>
+      <div
+        id="hero"
+        class="container relative mt-16 sm:mt-20 py-10 xl:min-h-screen"
+      >
+        <div
+          class="absolute top-[40%] sm:top-1/2 xl:text-[260px] left-1/2 transform -translate-x-1/2 -translate-y-1/2 -z-10 md:top-[45%] lg:top-1/2"
+        >
+          <p
+            class="text-[124px] leading-none sm:text-[170px] font-black text-[#241826] opacity-50"
+          >
+            FRA <br />
+            GRA <br />
+            NCE
+          </p>
+        </div>
+
+        <div class="flex flex-col items-center">
+          <div
+            class="hero__big-text text-[45px] sm:text-[70px] md:text-[90px] lg:text-[120px] xl:text-[180px] font-bold uppercase"
+          >
+            Celestia.
+          </div>
+
+          <div
+            class="hero__image relative -mt-16 sm:-mt-24 md:-mt-32 xl:-mt-52"
+          >
+            <img
+              src="./asset/images/hero.png"
+              alt="hero"
+              class="w-full mx-auto md:w-1/2 lg:w-1/3 xl:w-1/2"
+            />
+            <p
+              class="absolute bottom-[20%] left-1/2 transform -translate-x-1/2 -translate-y-1/2 w-full text-center text-4xl font-bold font-dancing xl:text-[65px]"
+            >
+              made of stardust
+            </p>
+          </div>
+
+          <div
+            class="hero__content flex flex-col items-center w-full gap-5 md:justify-between md:gap-1 md:flex-row"
+          >
+            <p class="max-w-80">
+              Celestia is a unique perfume, drawn from rarest meteorites, and is
+              the only one to be sourced from the stars.
+            </p>
+            <button class="btn">TRY NOW</button>
+            <p class="max-w-80 md:text-right">
+              Celestia is a unique perfume, drawn from rarest meteorites, and is
+              the only one to be sourced from the stars.
+            </p>
+          </div>
+        </div>
+      </div>
 
       <!--~~~~~~~~~~~~~~~ Collection Section ~~~~~~~~~~~~~~~-->
-      <section id="collection"></section>
+      <section id="collection" class="bg-sectionColor">
+        <div class="container">
+          <div
+            class="collection__top flex flex-col items-center gap-3 text-center mb-20 md:mb-28"
+          >
+            <h2 class="title text-titleColor">Collection</h2>
+            <p class="subtitle max-w-2xl">Things you need to know</p>
+          </div>
+
+          <div
+            class="w-full grid lg:grid-cols-3 md:grid-cols-2 gap-y-20 gap-x-8"
+          >
+            <!-- card1 -->
+            <div
+              class="collection__card relative bg-cardColor rounded-xl px-10 py-20"
+            >
+              <img
+                src="./asset/images/collection-1.png"
+                alt="collection-1"
+                class="w-40 absolute -top-20 left-0"
+              />
+
+              <div class="space-y-5">
+                <h2 class="cardtitle">Real Stardust</h2>
+                <p>
+                  We've sourced the finest meteorites and have extracted the
+                  very essence of the universe.
+                </p>
+              </div>
+
+              <div
+                class="bg-titleColor w-20 h-20 rounded-full flex items-center justify-center text-2xl border-8 border-sectionColor absolute -right-3 -bottom-3"
+              >
+                <i
+                  class="ri-arrow-right-line hover:translate-x-1 duration-300 cursor-pointer"
+                ></i>
+              </div>
+            </div>
+
+            <!-- card2 -->
+            <div
+              class="collection__card relative bg-cardColor rounded-xl px-10 py-20"
+            >
+              <img
+                src="./asset/images/collection-2.png"
+                alt="collection-1"
+                class="w-40 absolute -top-20 left-0"
+              />
+
+              <div class="space-y-5">
+                <h2 class="cardtitle">Real Stardust</h2>
+                <p>
+                  We've sourced the finest meteorites and have extracted the
+                  very essence of the universe.
+                </p>
+              </div>
+
+              <div
+                class="bg-titleColor w-20 h-20 rounded-full flex items-center justify-center text-2xl border-8 border-sectionColor absolute -right-3 -bottom-3"
+              >
+                <i
+                  class="ri-arrow-right-line hover:translate-x-1 duration-300 cursor-pointer"
+                ></i>
+              </div>
+            </div>
+
+            <!-- card3 -->
+            <div
+              class="collection__card relative bg-cardColor rounded-xl px-10 py-20"
+            >
+              <img
+                src="./asset/images/collection-3.png"
+                alt="collection-1"
+                class="w-40 absolute -top-20 left-0"
+              />
+
+              <div class="space-y-5">
+                <h2 class="cardtitle">Real Stardust</h2>
+                <p>
+                  We've sourced the finest meteorites and have extracted the
+                  very essence of the universe.
+                </p>
+              </div>
+
+              <div
+                class="bg-titleColor w-20 h-20 rounded-full flex items-center justify-center text-2xl border-8 border-sectionColor absolute -right-3 -bottom-3"
+              >
+                <i
+                  class="ri-arrow-right-line hover:translate-x-1 duration-300 cursor-pointer"
+                ></i>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
 
       <!--~~~~~~~~~~~~~~~ Popular Section ~~~~~~~~~~~~~~~-->
-      <section id="popular"></section>
+      <section id="popular">
+        <div class="container">
+          <div
+            class="popular__top flex flex-col items-center gap-3 text-center mb-20 md:mb-28"
+          >
+            <h2 class="title text-titleColor">Popular</h2>
+            <p class="subtitle max-w-2xl">Things you need to know</p>
+          </div>
+
+          <div class="flex flex-col md:flex-row items-center gap-5 lg:gap-10">
+            <!-- card1 -->
+            <div
+              class="popular__card-1 bg-cardColor w-full py-5 px-3 md:py-8 md:px-10 xl:py-10 xl:px-12 flex justify-between items-center md:w-1/2"
+            >
+              <div class="w-3/5">
+                <div class="max-w-56 xl:max-w-full">
+                  <p class="text-xs xl:text-base pb-2">TOP STAFF PICK</p>
+                  <p class="cardtitle-2">Best Collection</p>
+                  <div class="my-3 md:my-5">
+                    Use code: LIGHTCODE Get <br />
+                    25% Off for all items!
+                  </div>
+
+                  <button class="btn2 mt-5">Shop Now</button>
+                </div>
+              </div>
+
+              <div class="w-2/5">
+                <img
+                  src="./asset/images/popular-1.png"
+                  alt="popular-1"
+                  class="ml-auto w-full"
+                />
+              </div>
+            </div>
+
+            <!-- card2 -->
+            <div
+              class="popular__card-2 bg-cardColor w-full py-5 px-3 md:py-8 md:px-10 xl:py-10 xl:px-12 flex justify-between items-center md:w-1/2"
+            >
+              <div class="w-3/5">
+                <div class="max-w-56 xl:max-w-full">
+                  <p class="text-xs xl:text-base pb-2">TOP STAFF PICK</p>
+                  <p class="cardtitle-2">Best Collection</p>
+                  <div class="my-3 md:my-5">
+                    Use code: LIGHTCODE Get <br />
+                    25% Off for all items!
+                  </div>
+
+                  <button class="btn2 mt-5">Shop Now</button>
+                </div>
+              </div>
+
+              <div class="w-2/5">
+                <img
+                  src="./asset/images/popular-2.png"
+                  alt="popular-1"
+                  class="ml-auto w-full"
+                />
+              </div>
+            </div>
+          </div>
+
+          <!-- card3 -->
+          <div
+            class="popular__card-3 bg-cardColor text-center mt-5 lg:mt-10 py-10 px-3 bg-cover bg-center"
+            style="
+              background-image: linear-gradient(to right, #33003390, #330033),
+                url('./asset/images/popular_banner.jpg');
+            "
+          >
+            <div class="sm:max-w-72 mx-auto">
+              <p class="cardtitle-2">Collection Arrived</p>
+              <p class="my-3 md:my-5">
+                You have no items & Are you ready to use? come & shop with us!
+              </p>
+              <p>Price from: <span class="text-2xl font-bold">$45.00</span></p>
+              <button class="btn2 mt-10">Shop Now</button>
+            </div>
+          </div>
+        </div>
+      </section>
 
       <!--~~~~~~~~~~~~~~~ banner Section ~~~~~~~~~~~~~~~-->
-      <section></section>
+      <section class="bg-cardColor">
+        <div class="container">
+          <div class="flex flex-col lg:flex-row justify-between gap-10">
+            <!-- item1 -->
+            <div class="banner__content flex flex-1 gap-5 max-w-md">
+              <div class="text-5xl">
+                <i class="ri-plane-line"></i>
+              </div>
+
+              <div class="space-y-4">
+                <p class="uppercase font-bold">EU Free Delivery</p>
+                <p class="leading-relaxed">
+                  Free Delivery on all order from EU with price more than $90.00
+                </p>
+              </div>
+            </div>
+
+            <!-- item2 -->
+            <div class="banner__content flex flex-1 gap-5 max-w-md">
+              <div class="text-5xl">
+                <i class="ri-arrow-go-back-line"></i>
+              </div>
+
+              <div class="space-y-4">
+                <p class="uppercase font-bold">Money Guarantee</p>
+                <p class="leading-relaxed">
+                  30 Days money back guarantee no question asked!
+                </p>
+              </div>
+            </div>
+
+            <!-- item3 -->
+            <div class="banner__content flex flex-1 gap-5 max-w-md">
+              <div class="text-5xl">
+                <i class="ri-lock-2-line"></i>
+              </div>
+
+              <div class="space-y-4">
+                <p class="uppercase font-bold">online support 24/7</p>
+                <p class="leading-relaxed">
+                  We're here to support you. Let's shopping now!
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
 
       <!--~~~~~~~~~~~~~~~ About Section ~~~~~~~~~~~~~~~-->
-      <section id="about"></section>
+      <section id="about" class="bg-sectionColor">
+        <div class="container">
+          <div
+            class="about__top flex flex-col items-center gap-3 text-center mb-20 md:mb-28"
+          >
+            <h2 class="title text-titleColor">About Celestia.</h2>
+            <p class="subtitle max-w-2xl">Things you need to know</p>
+          </div>
+
+          <div
+            class="flex flex-col md:flex-row items-start xl:items-center gap-5 lg:gap-10 mt-20"
+          >
+            <div class="about__image w-full md:w-1/2">
+              <img src="./asset/images/about.png" alt="about" />
+            </div>
+
+            <div class="about__content w-full md:w-1/2">
+              <div>
+                <p class="text-xs xl:text-base">TOP STAFF PICK</p>
+                <p class="cardtitle-2">Best Collection</p>
+                <p class="mt-3 md:mt-5">
+                  Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                  Alias aliquam eius facere. Aliquid error ratione a molestiae
+                  veniam? In dolor ducimus nisi natus culpa ex suscipit
+                  cupiditate quia, officia quo!
+                </p>
+                <br />
+                <p>
+                  Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                  Beatae, nostrum earum fugiat expedita reprehenderit at?
+                </p>
+                <button class="btn2 mt-5 lg:mt-10">Shop Now</button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
 
-    <footer></footer>
+    <!--~~~~~~~~~~~~~~~ footer ~~~~~~~~~~~~~~~-->
+    <footer class="footer__content container py-20">
+      <div class="flex flex-col md:flex-row items-center gap-8">
+        <div class="w-full md:w-1/2">
+          <p class="cardtitle">Newsletter</p>
+          <p>Sign up for our free video course and urban garden inspiration</p>
+        </div>
+
+        <div class="w-full md:w-1/2">
+          <div class="flex flex-col md:flex-row gap-2">
+            <input
+              type="email"
+              placeholder="Your email"
+              class="w-full px-5 py-3 text-bodyColor outline-none"
+            />
+            <button class="btn2">Subscribe</button>
+          </div>
+        </div>
+      </div>
+
+      <p class="text-center mt-10 opacity-50 lg:mt-16">
+        Copyright &copy; 2024 LightCode. All rights reserved
+      </p>
+    </footer>
 
     <!--~~~~~~~~~~~~~~~ Scroll Up ~~~~~~~~~~~~~~~-->
+    <a
+      href="#"
+      id="scroll-up"
+      class="fixed right-10 -bottom-1/2 bg-titleColor px-2 py-1 md:px-4 md:py-2 rounded-sm text-xs md:text-lg z-50 hover:-translate-y-1 ease-in duration-300"
+    >
+      <i class="ri-arrow-up-line"></i>
+    </a>
 
     <!--~~~~~~~~~~ SCROLLREVEAL ~~~~~~~~~~-->
-
+    <script src="./asset/js/scrollreveal.min.js"></script>
     <!--~~~~~~~~~~ MAIN JS ~~~~~~~~~~-->
+    <script src="./main.js"></script>
   </body>
 </html>
